fix dropdown on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -146,6 +146,9 @@
     #resource-container {
         width: 10rem;
     }
+    .dropdown-label {
+        font-size: .9rem;
+    }
 }
 
 /* MAIN IMAGE */
